0.32 after review fix