@@ -74,7 +74,7 @@ public class PublicEventServiceImpl implements PublicEventService {
         List<Event> foundEvents = eventRepository
                 .publicEventSearch(text, categories, paid, rangeStart, rangeEnd, from, size);
         if (foundEvents.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         List<EventFullDto> eventFullDtos = foundEvents.stream()
